modified:   meq-llm-lora/configs/run.yaml 	new file:   meq-llm-lora/outputs/mlflow/0/meta.yaml 	new file:   meq-llm-lora/outputs/tinyllama-lora/chat_template.jinja 	new file:   meq-llm-lora/outputs/tinyllama-lora/checkpoint-1/README.md 	new file:   meq-llm-lora/outputs/tinyllama-lora/checkpoint-1/adapter_config.json 	new file:   meq-llm-lora/outputs/tinyllama-lora/checkpoint-1/adapter_model.safetensors 	new file:   meq-llm-lora/outputs/tinyllama-lora/checkpoint-1/chat_template.jinja 	new file:   meq-llm-lora/outputs/tinyllama-lora/checkpoint-1/optimizer.pt 	new file:   meq-llm-lora/outputs/tinyllama-lora/checkpoint-1/rng_state.pth 	new file:   meq-llm-lora/outputs/tinyllama-lora/checkpoint-1/scaler.pt 	new file:   meq-llm-lora/outputs/tinyllama-lora/checkpoint-1/scheduler.pt 	new file:   meq-llm-lora/outputs/tinyllama-lora/checkpoint-1/special_tokens_map.json 	new file:   meq-llm-lora/outputs/tinyllama-lora/checkpoint-1/tokenizer.json 	new file:   meq-llm-lora/outputs/tinyllama-lora/checkpoint-1/tokenizer.model 	new file:   meq-llm-lora/outputs/tinyllama-lora/checkpoint-1/tokenizer_config.json 	new file:   meq-llm-lora/outputs/tinyllama-lora/checkpoint-1/trainer_state.json 	new file:   meq-llm-lora/outputs/tinyllama-lora/checkpoint-1/training_args.bin 	new file:   meq-llm-lora/outputs/tinyllama-lora/lora_adapter/README.md 	new file:   meq-llm-lora/outputs/tinyllama-lora/lora_adapter/adapter_config.json 	new file:   meq-llm-lora/outputs/tinyllama-lora/lora_adapter/adapter_model.safetensors 	new file:   meq-llm-lora/outputs/tinyllama-lora/special_tokens_map.json 	new file:   meq-llm-lora/outputs/tinyllama-lora/tokenizer.json 	new file:   meq-llm-lora/outputs/tinyllama-lora/tokenizer.model 	new file:   meq-llm-lora/outputs/tinyllama-lora/tokenizer_config.json 	new file:   meq-llm-lora/src/infer_lora.py 	modified:   meq-llm-lora/src/train_lora.py

--- a/meq-llm-lora/configs/run.yaml
+++ b/meq-llm-lora/configs/run.yaml
@@ -1,7 +1,7 @@
 model_id: TinyLlama/TinyLlama-1.1B-Chat-v1.0
-output_dir: outputs/tinyllama-lora
-train_file: data/train.jsonl
-eval_file: data/val.jsonl
+output_dir: /mnt/d/GitHub/MeQuest/meq-llm-lora/outputs/tinyllama-lora
+train_file: /mnt/d/GitHub/MeQuest/meq-llm-lora/data/train.jsonl
+eval_file: /mnt/d/GitHub/MeQuest/meq-llm-lora/data/val.jsonl
 
 # LoRA
 lora:
